[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts-images/bandit one knife.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy scripts/bandit_one_knife.gd" type="Script" id=2]
[ext_resource path="res://scenes/status_bar.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=5]
gradient = SubResource( 4 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.883041 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=7]
gradient = SubResource( 6 )
fill = 1
fill_from = Vector2( 0.478448, 0.565733 )
fill_to = Vector2( 1, 1 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), null, SubResource( 1 ), null, SubResource( 1 ), null ],
"loop": false,
"name": "damage_flash",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[node name="bandit_one_knife" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 60, 60 )
mouse_filter = 2
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 7 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 35, 24 )
frames = SubResource( 3 )
animation = "idle"

[node name="status_bar" parent="." instance=ExtResource( 3 )]
margin_left = 4.0
margin_top = 7.0
margin_right = 44.0
margin_bottom = 47.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animation_finished"]
